# delta-parser

./: .gitignore
delta-parser/: .hlint.yaml  delta-parser.cabal
delta-parser/src/Text/Parser/: ALLStar.hs  Delta.hs
delta-parser/src/Text/Parser/Delta/: Classifiable.hs  TokenIndex.hs  Util.hs
delta-parser/tests/: ATNTests.hs  AutomataCacheTests.hs  DFATests.hs  Main.hs
