name:           delta-parser
version:        0.1
cabal-version:  >= 1.18
build-type:     Simple
author:         Julian Hall <kindlangdev@gmail.com>
stability:      experimental
synopsis:       Parser combinators for incremental parsing of time-varying texts

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends:      base >= 4.8,
                        containers >= 0.5 && < 0.6,
                        IntervalMap >= 0.5.2 && < 0.6
    ghc-options:        -Wall -fno-warn-unused-do-bind
    exposed-modules:    Text.Parser.Delta,
                        Text.Parser.Delta.Classifiable

executable watch-json
    default-language:   Haskell2010
    hs-source-dirs:     watch-json
    main-is:            Main.hs
    build-depends:      base >= 4.8,
                        delta-parser
