name:           delta-parser
version:        0.1
cabal-version:  >= 1.18
build-type:     Simple
author:         Julian Hall <kindlangdev@gmail.com>
stability:      experimental
synopsis:       Parser combinators for incremental parsing of time-varying texts

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends:      base >= 4.8,
                        containers >= 0.5 && < 0.6,
                        IntervalMap >= 0.5.26 && < 0.7,
                        hashtables >= 1.2.1 && < 1.3
    ghc-options:        -Wall -fno-warn-unused-do-bind
    exposed-modules:    Text.Parser.Delta,
                        Text.Parser.Delta.Classifiable,
                        Text.Parser.Delta.TokenIndex,
                        Text.Parser.ALLStar

executable watch-json
    default-language:   Haskell2010
    hs-source-dirs:     watch-json
    main-is:            Main.hs
    build-depends:      base >= 4.8,
                        delta-parser

test-suite delta-parser-tests
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    hs-source-dirs:     tests
    main-is:            Main.hs
    build-depends:      base >= 4.8,
                        delta-parser,
                        tasty >= 1.0,
                        tasty-hunit >= 0.10,
                        tasty-quickcheck >= 0.10,
                        QuickCheck >= 2.10 && < 3,
                        containers >= 0.5 && < 0.6,
                        IntervalMap >= 0.5.26 && < 0.7,
                        hashtables >= 1.2.1 && < 1.3
    other-modules:      ATNTests, AutomataCacheTests, DFATests
